# parquet-to-falkordb

./: COMPREHENSIVE_LLM.md  Cargo.toml  LICENSE  README.md
docs/: queries.txt  results.txt
src/: main.rs
