[package]
name = "parquet-to-falkordb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2"
futures = "0.3"
bytes = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = { version = "57", features = ["arrow", "async"] }
arrow-array = "57"
arrow-schema = "57"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
hex = "0.4"